optimize space to avoid useless scrollbar

--- a/public/enhanced-table-vis.less
+++ b/public/enhanced-table-vis.less
@@ -32,36 +32,53 @@
 
 // ENHANCED DATA TABLE //
 
-.computed-columns-options-container {
-  margin-bottom: 20px;
-}
+.enhanced-table {
+  padding: 0px 5px;
 
-kbn-agg-table-group .table {
-  margin-bottom: 0px;
-}
+  visualization {
+    padding: 0px 5px;
+  }
 
-.hide-export-links .agg-table-controls {
-  display: none;
-}
+  .agg-table-group > tbody > tr > td {
+    padding: 0px 5px;
+  }
 
-.hide-pagination paginate-controls {
-  display: none;
-}
+  paginate-controls {
+    padding: 0px 5px;
+  }
 
-.filterInput {
-  width: 100%;
-  border-color: #ecf0f1;
-  border-width: 2px 0px 2px 2px;
+  .computed-columns-options-container {
+    margin-bottom: 20px;
+  }
 
-}
-.filterInput:focus {
-  border-color: #b4bcc2;
-}
+  kbn-agg-table-group .table {
+    margin-bottom: 0px;
+  }
 
-.filterButton {
-  height: 32px;
-}
+  .hide-export-links .agg-table-controls {
+    display: none;
+  }
 
-.filterText {
-  padding-right: 20px;
+  .hide-pagination paginate-controls {
+    display: none;
+  }
+
+  .filterInput {
+    width: 100%;
+    border-color: #ecf0f1;
+    border-width: 2px 0px 2px 2px;
+  }
+
+  .filterInput:focus {
+    border-color: #b4bcc2;
+  }
+
+  .filterButton {
+    height: 32px;
+  }
+
+  .filterText {
+    padding-right: 20px;
+  }
+
 }
